<resources>
    <string name="app_name">ApplicationAndroid</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="station_details">Station details</string>
    <string name="search_station">Search station</string>
    <string name="description">Description</string>
    <string name="station_code">Station Code</string>
    <string name="station_name">Station Name</string>
    <string name="list_of_bixi_stations">LIST OF BIXI STATIONS</string>
    <string name="global_usage_prediction_of_bixi_stations">GLOBAL USAGE PREDICTION OF BIXI STATIONS</string>
    <string name="global_usage_statistics_of_bixi_stations">GLOBAL USAGE STATISTICS OF BIXI STATIONS</string>
    <string name="global_data_of_bixi_stations">GLOBAL DATA OF BIXI STATIONS</string>
    <string name="bixi_over_to_you">BIXI OVER TO YOU</string>
    <string name="station_coordinates">Station Coordinates</string>
    <string name="station_data">Station Data</string>
    <string name="station_statistics">Station Statistics</string>
    <string name="station_predictions">Station Predictions</string>
    <string name="all_about_bixi_stations">ALL ABOUT BIXI STATIONS</string>
    <string name="list_of_stations">LIST OF STATIONS</string>
    <string name="global_usage_data">GLOBAL USAGE DATA</string>
    <string name="global_usage_statistics">GLOBAL USAGE STATISTICS</string>
    <string name="global_usage_predictions">GLOBAL USAGE PREDICTIONS</string>
    <string name="bixi_stations">BIXI STATIONS</string>
    <string name="coordinates">COORDINATES</string>
    <string name="data">DATA</string>
    <string name="statistics">STATISTICS</string>
    <string name="predictions">PREDICTIONS</string>
    <string name="station_code_label">Station Code :</string>
    <string name="station_coordinates_title">STATION COORDINATES</string>
</resources>