<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#fff"
    app:cardUseCompatPadding="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_place_black_48dp" />

    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_code"
            android:textColor="@color/headerColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/station_name"
            android:textColor="@color/headerColor"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <Button
            android:id="@+id/coordinates_button"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/detailed_activity_button"
            android:text="@string/coordinates"
            android:textSize="18sp"
            android:textColor="@color/headerColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/data_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/detailed_activity_button"
            android:text="@string/data"
            android:textSize="18sp"
            android:textColor="@color/headerColor"
            android:textStyle="bold"
            tools:text="DATA" />

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/detailed_activity_button"
            android:text="@string/statistics"
            android:textSize="18sp"
            android:textColor="@color/headerColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/prediction_button"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/detailed_activity_button"
            android:text="@string/predictions"
            android:textSize="18sp"
            android:textColor="@color/headerColor"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>